# WISE_Application

./: README.md  WISE_CLI_HELP.md  workflow-cmake.md  workflow.md
.github/workflows/: bugTest_172.yml  bugTest_182.yml  cmake-dev.yml  cmake.yml  deb_test  deb_test.yml  smoketest.yml  smoketest_2004.yml  smoketest_2204.yml  workflow2mermaid.yml
Installer/Ubuntu/: WISE.sh  control2004  control2204
Installer/Windows/: ReplaceInFile.nsh  install_script.bat  java_check.bat  license_v53.rtf  nsDialogs_setImageOle.nsh  wise.nsi
Installer/Windows/run/: Prometheus.fuelmapx  Prometheus_TAZ.fuelmapx  WISE.clrtbl  WISE_NZ.fuelmapx
WISE/: CMakeLists.txt
WISE/cpp/: Initialization.cpp  Initialization.proto.cpp  Simulation.cpp  Stats.cpp  WISE_P.cpp  misc_native.cpp  mqtt.cpp  status.cpp
WISE/include/: .gitignore  Resource.h  Stats.h  WISE.h  WISE_P.h  misc_native.h  mqtt.h
WISE_Project/: CMakeLists.txt
WISE_Project/cpp/: .gitignore  AngleGridFilter.cpp  AssetStats.cpp  AttributeGridFilter.cpp  BasicScenarioOptions.cpp  BurnPeriodOption.cpp  CWFGMProject.Serialize.cpp  CWFGMProject.cpp  CWFGMProject.proto.cpp  FBPOptions.cpp  FGMOutputs.cpp  Fire.cpp  FireCollection.Serialize.cpp  FireCollection.cpp  FireCollection.proto.cpp  FuelCollection.Serialize.cpp  FuelCollection.cpp  FuelCollection.proto.cpp  FuelGridFilter.cpp  GISOptions.cpp  GeoJSONHelper.cpp  GreenupGridFilter.cpp  GridFilter.cpp  GridFilter.proto.cpp  GridFilterCollection.Serialize.cpp  GridFilterCollection.cpp  LandscapeWarningOptions.cpp  PercentConiferGridFilter.cpp  PrintReportOptions.cpp  PrjWeatherStation.cpp  PrjWeatherStream.cpp  ReplaceGridFilter.cpp  Scenario.cpp  Scenario.proto.cpp  ScenarioCollection.Serialize.cpp  ScenarioCollection.cpp  StaticData.cpp  StatsBuilder.cpp  TimestepSettings.cpp  VectorExportOptions.cpp  (+20 more)
WISE_Project/include/: AngleGridFilter.h  AssetStats.h  AttributeGridFilter.h  BaseObject.h  BasicScenarioOptions.h  BurnPeriodOption.h  CWFGMProject.h  ElevStruct.h  FBPOptions.h  FGMOutputs.h  FireCollection.h  FontHelper.h  FuelCollection.h  FuelGridFilter.h  GISOptions.h  GeoJSONHelper.h  GreenupGridFilter.h  GridFilter.h  GridFilterCollection.h  IJsonConvert.h  LandscapeWarningOptions.h  PercentConiferGridFilter.h  PermissibleVectorReadDrivers.h  PrintReportOptions.h  ReplaceGridFilter.h  ScenarioCollection.h  StaticData.h  StaticDataStruct.h  StaticUpgradeData.h  StatsBuilder.h  StdAfx.h  StdFireCollection.h  SummaryCollection.h  TimestepSettings.h  VectorExportOptions.h  WeatherCollection.h  WeatherGridFilter.h  WeatherGridManager.h  WeatherOptions.h  WindDirectionGrid.h  (+11 more)
WISE_Project/java/: .project  pom.xml  pom.xml.in
WISE_Project/java/src/main/java/ca/wise/project/proto/: FireCollection.java  FireCollectionOrBuilder.java  FuelCollection.java  GridCollection.java  GridCollectionOrBuilder.java  GridCollectionOuterClass.java  LutFuelCollection.java  LutFuelCollectionOrBuilder.java  Project.java  ProjectAsset.java  ProjectAttributeGridFilter.java  ProjectAttributeGridFilterOrBuilder.java  ProjectFireOrBuilder.java  ProjectFuel.java  ProjectFuelOrBuilder.java  ProjectGridFilter.java  ProjectIgnition.java  ProjectPolyWeatherGridFilterOrBuilder.java  ProjectScenario.java  ProjectScenarioOrBuilder.java  ProjectScenarioOuterClass.java  ProjectTarget.java  ProjectTargetOrBuilder.java  ProjectVectorFilterOrBuilder.java  ProjectWeatherStationOrBuilder.java  ProjectWindGrid.java  ScenarioCollection.java  ScenarioReport.java  ScenarioReportGroupOrBuilder.java  ScenarioReportOrBuilder.java  StationCollectionOrBuilder.java  Summary.java  VectorCollection.java  ViewCollectionOrBuilder.java  ViewStorage.java  ViewStorageOrBuilder.java  ViewStorageOuterClass.java
WISE_Project/proto/: cwfgmProject.proto  fuelCollection.proto  gridCollection.proto  projectGridFilter.proto  projectIgnition.proto  projectWindGrid.proto  vectorCollection.proto  weatherStation.proto
WISE_Project_Java/: pom.xml  pom.xml.in
WISE_Project_Java/src/main/java/ca/wise/project/proto/: AssetCollection.java  AssetCollectionOrBuilder.java  AssetCollectionOuterClass.java  CwfgmProject.java  FuelCollectionOrBuilder.java  FuelCollectionOuterClass.java  GlobalStatistics.java  ProjectAssetOrBuilder.java  ProjectFire.java  ProjectOrBuilder.java  ProjectPolyReplaceGridFilter.java  ProjectPolyReplaceGridFilterOrBuilder.java  ProjectPolyWeatherGridFilter.java  ProjectReplaceGridFilter.java  ProjectReplaceGridFilterBase.java  ProjectReplaceGridFilterBaseOrBuilder.java  ProjectReplaceGridFilterOrBuilder.java  ProjectVectorFilter.java  ProjectWeatherGridFilter.java  ProjectWeatherGridFilterOrBuilder.java  ProjectWeatherStation.java  ProjectWindGridOrBuilder.java  ProjectWindGridOuterClass.java  PrometheusData.java  PrometheusDataOrBuilder.java  ScenarioCollectionOrBuilder.java  ScenarioReportGroup.java  StaticPoint.java  StaticPointOrBuilder.java  StaticPoints.java  StationCollection.java  TargetCollection.java  TargetCollectionOrBuilder.java  VectorCollectionOrBuilder.java  VectorCollectionOuterClass.java  ViewCollection.java  WeatherStation.java
proto/: assetCollection.proto  projectScenario.proto  staticPoints.proto  summary.proto  viewStorage.proto
